clusters/apps/env/production/media/lidarr/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: lidarr
spec:
  hosts:
    - 'lidarr.${SECRET_DOMAIN}'
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 8686
            host: lidarr.media.svc.cluster.local
          weight: 100
